--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 	<h2>Meu Primeiro Título no VS Code</h2>
 	<p>Mais um parágrafo para demonstrar o HTML</p>
 	<h2>Mais um Teste</h2>
+	<p>Teste 3º parágrafo</p>
+	<h2>Teste com sincronia de contas</h2>
+	<p>Teste 4º parágrafo</p>
 </body>
 </html>
