--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!Doctype html>
 <html>
 <head>
-	<title>Minha Primeira Página HTML</title>
+	<title>Meu Primeiro Currículo HTML</title>
 </head>
-<body>
-	<h1>Primeira Página das Alunas Assíncronas</h1>
-	<p> Essa é nossa 1ª página, em modo de bloco de notas</p>
-	<h2>Meu Primeiro Título no VS Code</h2>
-	<p>Mais um parágrafo para demonstrar o HTML</p>
-	<h2>Mais um Teste</h2>
-	<p>Teste 3º parágrafo</p>
-	<h2>Teste com sincronia de contas</h2>
-	<p>Teste 4º parágrafo</p>
+<body style="background-color:#e7f7e3 ;"></body>
+	<h2 style= color:#0F663D;"">Wania Vaz Aragon</h2>
+	<p><b>Contatos: </b> Fone: 14 - 98803-2493 - Email: wavagon10@gmail.com </p>
+	<p><b> Endereço: </b> Vila Pacífico II - Bauru/SP </p>
+	<br>
+	<hr>
+	<h3>Objetivo</h3>
+	<h3>Qualificações e Habilidades</h3>
+	<h3>Formação</h3>
+	<h3>Experiência</h3>
+	<h3>Cursos Extra Curriculares e Certificações</h3>
+	
 </body>
 </html>
